# pyshell

./: .gitignore  README.md  WORK_ITEMS.md  pyproject.toml  test_capture_wsl.py
.cursor/rules/: maintain-docs.mdc
docs/: API.md  DESIGN.md  README.md
pyshell/: __init__.py  __main__.py  builtins.py  executor.py  expansion.py  parser.py  shell.py
tests/: __init__.py  test_executor.py  test_expansion.py  test_parser.py  test_shell.py
