[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshell"
version = "0.1.0"
description = "A command-line shell with Python-like syntax"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pyshell" }]
keywords = ["shell", "repl", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
pyshell = "pyshell.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyshell*"]
